--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.2.0",
     "react": "16.0.0",
-    "react-native": "~0.49.5",
-    "three": "^0.87.0",
     "react-360": "~1.0.0",
-    "react-360-web": "~1.0.0"
+    "react-360-web": "~1.0.0",
+    "react-native": "~0.49.5",
+    "three": "^0.87.0"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
