--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "ninja_the_virtual",
-  "version": "0.0.1",
-  "private": true,
+  "name": "webpack-boilerplate",
+  "version": "1.1.0",
+  "description": "Webpack 3 boilerplate with babel and sass",
+  "author": "Jesper Orb <jesperorb@gmail.com> (https://jesperorb.com/)",
+  "main": "index.js",
   "scripts": {
-    "start": "node -e \"console.log('open browser at http://localhost:8081/index.html\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
-    "bundle": "node node_modules/react-360/scripts/bundle.js",
-    "open": "node -e \"require('xopen')('http://localhost:8081/index.html')\"",
-    "devtools": "react-devtools",
-    "test": "jest"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production"
+  },
+  "keywords": [
+    "webpack",
+    "babel",
+    "sass"
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
+    "babel-loader": "8.0.0-beta.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.20.3",
+    "webpack": "4.5.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-360": "~1.0.0",
-    "react-360-web": "~1.0.0",
-    "react-native": "~0.49.5",
-    "three": "^0.87.0"
-  },
-  "devDependencies": {
-    "babel-jest": "^19.0.0",
-    "babel-preset-react-native": "^1.9.1",
-    "jest": "^19.0.2",
-    "react-devtools": "^2.5.2",
-    "react-test-renderer": "16.0.0",
-    "xopen": "1.0.0"
-  },
-  "jest": {
-    "preset": "react-360"
+    "babel-polyfill": "6.26.0"
   }
 }
