--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "aframe": "^0.8.2",
+    "aframe-layout-component": "^4.3.1",
+    "aframe-state-component": "^3.4.0",
+    "aframe-template-component": "^3.2.1",
     "babel-polyfill": "6.26.0"
   }
 }
