--- a/package.json
+++ b/package.json
@@ -15,21 +15,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.44",
-    "@babel/preset-env": "7.0.0-beta.44",
-    "babel-loader": "8.0.0-beta.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.8.3",
-    "nodemon": "^1.17.5",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "webpack": "4.5.0",
-    "webpack-cli": "2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "nodemon": "^1.17.5"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
